# azure-ai-orchestrator

./: .gitignore  README.md  docker-compose-angular.yml  docker-compose-react.yml  docker-compose.yml  main.py  pyproject.toml
backend-python/: .dockerignore  dockerfile  llm_project.py  main.py  requirements.txt
backend-python-RAG/: llm_rag_init.py  main.py  pyproject.toml
backend-python-api/: Dockerfile  main.py
backend-python-rag-implementation/: llm_rag_init.py  llm_rag_invoke.py
frontend-angular/: Dockerfile  package-lock.json  package.json
frontend-angular/src/: main.server.ts  main.ts
frontend-angular/src/app/: app.css  app.html  app.ts
frontend-react/: dockerfile
frontend-react/src/: App.jsx
research-and-developement/: main1.py
research-and-developement/terraform_test/: main.tf
terraform_test/: .terraform.lock.hcl  terraform.tfstate  terraform.tfstate.backup
